# ui-tests

./: conftest.py  pyproject.toml  requirements.txt
page_actions/: add_product.py  base_page.py  check_product.py  get_product.py
page_objects/: selectors.py
tests/: conftest.py  test_add_to_cart.py
utils/: constants.py  requirements.txt  selectors.py
