[tool.poetry]
name = "homework-ui"
version = "0.1.0"
description = ""
authors = ["Renat Devetyarov <dfsdf>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
